<resources>
    <string name="app_name">Github User\'s Search</string>
    <string name="search_name">Search Name</string>

    <string name="tx_username">\@%s</string>
    <string name="tx_name">Name</string>
    <string name="tx_avatar">Avatar</string>
    <string name="tx_repository">%s Repository</string>
    <string name="tx_followers">%s Followers</string>
    <string name="tx_following">%s Following</string>

    <string name="tx_favorite">Favorite Users</string>

    <string name="reminder_setting">Reminder Setting</string>
    <string name="tv_reminder">Daily Reminder</string>
    <string name="tv_message">Find New Programmer from Github !!</string>
    <string name="tx_test">Test Reminder Running</string>
    <string name="tx_test_ok">Running Succesfully, Please Check Notification</string>
    <string name="sw_on">Reminder Active at 09.00 AM</string>
    <string name="sw_off">Reminder Non Active</string>

    <string name="languange_setting">Languange Setting</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nul">NULL</string>
    <string name="separator">Separator</string>
    <string name="count">Count</string>

    <string name="tb_company">Company</string>
    <string name="tb_location">Location</string>
    <string name="tb_repository">Repository</string>
    <string name="tb_followers">Followers</string>
    <string name="tb_following">Following</string>

    <string name="appwidget_text">GITHUB USER APP</string>
    <string name="empty_text">NO DATA</string>
</resources>